# ChangeLog for virtual/ruby-minitest
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/virtual/ruby-minitest/ChangeLog,v 1.55 2015/08/02 09:47:40 pacho Exp $

  02 Aug 2015; Pacho Ramos <pacho@gentoo.org> ruby-minitest-0-r4.ebuild:
  sparc stable wrt bug #518094

  30 Jul 2015; Tobias Klausmann <klausman@gentoo.org>
  ruby-minitest-0-r4.ebuild:
  Stable on alpha, bug 518094

  29 Jul 2015; Mikle Kolyada <zlogene@gentoo.org> ruby-minitest-0-r4.ebuild:
  amd64 stable wrt bug #518094

  26 Jul 2015; Markus Meier <maekke@gentoo.org> ruby-minitest-0-r4.ebuild:
  arm stable, bug #518094

  23 Jul 2015; Pacho Ramos <pacho@gentoo.org> ruby-minitest-0-r4.ebuild:
  ppc stable wrt bug #518094

*ruby-minitest-1 (07 Jun 2015)

  07 Jun 2015; Hans de Graaff <graaff@gentoo.org> ruby-minitest-0-r4.ebuild,
  +ruby-minitest-1.ebuild:
  Create stable candidate for ruby21.

  18 May 2014; Hans de Graaff <graaff@gentoo.org> ruby-minitest-0-r4.ebuild:
  Add missing mips keyword.

  22 Apr 2014; Manuel Rüger <mrueg@gentoo.org> ruby-minitest-0-r3.ebuild,
  ruby-minitest-0-r4.ebuild:
  Remove ruby18 target.

  12 Apr 2014; Manuel Rüger <mrueg@gentoo.org> -ruby-minitest-0-r2.ebuild:
  Cleanup old.

  26 Jan 2014; Agostino Sarubbo <ago@gentoo.org> ruby-minitest-0-r3.ebuild:
  Stable for alpha, wrt bug #483254

  26 Jan 2014; Agostino Sarubbo <ago@gentoo.org> ruby-minitest-0-r3.ebuild:
  Stable for sparc, wrt bug #483254

  29 Dec 2013; Markus Meier <maekke@gentoo.org> ruby-minitest-0-r3.ebuild:
  arm stable, bug #483254

*ruby-minitest-0-r4 (26 Dec 2013)

  26 Dec 2013; Hans de Graaff <graaff@gentoo.org> +ruby-minitest-0-r4.ebuild:
  Add ruby21.

  20 Dec 2013; Akinori Hattori <hattya@gentoo.org> ruby-minitest-0-r3.ebuild:
  ia64 stable wrt bug #483254

  15 Dec 2013; Agostino Sarubbo <ago@gentoo.org> ruby-minitest-0-r3.ebuild:
  Stable for ppc64, wrt bug #483254
