@@ -1,6 +1,9 @@
 # ChangeLog for virtual/rubygems
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/rubygems/ChangeLog,v 1.71 2015/08/02 09:47:51 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/rubygems/ChangeLog,v 1.72 2015/08/05 09:46:38 zlogene Exp $
+
+  05 Aug 2015; Mikle Kolyada <zlogene@gentoo.org> rubygems-10.ebuild:
+  x86 stable wrt bug #518094
 
   02 Aug 2015; Pacho Ramos <pacho@gentoo.org> rubygems-10.ebuild:
   sparc stable wrt bug #518094
