@@ -1,6 +1,9 @@
 # ChangeLog for virtual/ruby-minitest
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/ruby-minitest/ChangeLog,v 1.55 2015/08/02 09:47:40 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/ruby-minitest/ChangeLog,v 1.56 2015/08/05 09:47:12 zlogene Exp $
+
+  05 Aug 2015; Mikle Kolyada <zlogene@gentoo.org> ruby-minitest-0-r4.ebuild:
+  x86 stable wrt bug #518094
 
   02 Aug 2015; Pacho Ramos <pacho@gentoo.org> ruby-minitest-0-r4.ebuild:
   sparc stable wrt bug #518094
